# chillhub-backend

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
auth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
chillhub/: asgi.py  settings.py  urls.py  wsgi.py
